[fix] add DTOs to avoid infinite loops